1999-07-21  Dan Espen  <dane@mk.telcordia.com>

	* FvwmBanner/FvwmBanner.1: General cleanups to the man page.

1999-07-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmForm/FormFvwmRootCursor.pl:
	* FvwmForm/FormFvwmRootCursor.:
	Initial cursor is now checked, more colors, cursor names are 5 in row
	to help people with 800x600 screens.

	* FvwmTaskBar/Mallocs.[hc]:
	* FvwmBacker/Mallocs.[hc]:
	Added const to char * in UpdateString().

1999-07-10  Chris Rankin <rankinc@zipworld.com.au>

	* FvwmTaskBar/FvwmTaskBar.c
	Changed SIGALRM handler to use sigaction-type semantics; replaced
    MotionNotify event-mask for XSendEvent() with EnterNotify since
    no clients accept MotionNotify events (hence no tool-tips!). Removed
    lingering debug-fprintfs and rewrote EndLessLoop() so that it only
    uses the single select() statement. (Modelled after FvwmWinList.)
    Added "void" to a lot of empty prototypes, and added GNU "noreturn"
    attribute to DeadPipe(). Concentrated all calls to alarm() within the
    SetAlarm() and ClearAlarm() functions.

1999-07-10  Tomas Ogren  <stric@ing.umu.se>

	* FvwmConsole/FvwmConsole.c: s/socklen_t/size_t/ - socklen_t doesn't
	exist on neither Solaris 2.6 nor IRIX 6.5.4f
	* FvwmGtk/expand.c: Initialize a variable to NULL

1999-07-09  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmWharf/FvwmWharf.c (Loop):
	(Loop):
	(CloseFolder):
	* FvwmScript/FvwmScript.c (SendMsgToScript):
	(ReadXServer):
	* FvwmScript/Widgets/Tools.c (DrawPMenu):
	(SelectMenu):
	* FvwmScript/Widgets/TextField.c (EvtMouseTextField):
	* FvwmIconMan/fvwm.c (icon_name):
	(sendtomodule):
	* FvwmForm/ReadXServer.c (ReadXServer):
	* FvwmConsole/FvwmConsoleC.c (main):
	* FvwmConsole/FvwmConsole.c: --pedantic fixes

	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmTaskBar/ButtonArray.c:
	* FvwmTaskBar/ButtonArray.h: applied IconFore patch by Danny Dulai

1999-07-04  Chris Rankin  <rankinc@zipworld.com.au>

    * FvwmScript/FvwmScript.c : Added new signal handling (sigaction),