@@ -223,6 +223,8 @@ EXTERN int screen;
    . copied into items during parse
    . displayed in the customization dialog
    */
+static int colorset = 0;
+static int itemcolorset = 0;
 enum { c_bg, c_fg, c_item_bg, c_item_fg, c_itemlo, c_itemhi };
 #ifdef IamTheMain
 EXTERN char *color_names[4] = {
