@@ -1,3 +1,8 @@
+1999-07-22  Brad Giaccio
+
+	* module/FvwmForm/*: added colorset support
+	* module/FvwmScroll/*: added colorset support
+
 1999-07-21  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmBanner/FvwmBanner.1: General cleanups to the man page.
